--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-safe-area-context": "^4.3.3",
